2013-12-17 v2.0.0.7:
	* cheer:	[TOP] Rename program name cpe_kpi_emu -> cheer.
	* main:		[FUN] Remove -l para, debug level set in config file.
	* cfg:		[FUN] Read debug level in config file.
	* cfg:		[FUN] Empty value is allowd.
	* dbg:		[FUN] Add LVL_NON.

2013-12-16 v1.1.0.6:
	* cfg.c:	Initial version.
	* main.c:	Use configuration file, remove some cmd parameters.
				Support backup directory configuration.
				Add permit_to_run() to check running parameters and environment.
	* main.h:	Rename uld_intval -> interval.

2013-12-16 v1.0.3.5:
	* uld.c:	[BUG] Debug information format error.

2013-12-16 v1.0.2.4:
	* gen.c:	[BUG] Fixed kpi file format error.
	* uld.c:	[FUN] Try to upload other kpi files continually if one uploaded
				failed.

2013-12-13 v1.0.1.3:
	* main.c:	Optimize delay mechanism.

2013-12-13 v1.0.0.2:
	* main.c:	Redesign program logic, 3 thread.
				Depatch kpi generation and kpi upload to child modules.
				Add parameter parser.
				Sleep 1s to wait pthread be canceled, remove leak of mem.
	* main.h:	Global config struct -> const context and pass to child modules.
	* gen.c:	Porting from main.c.
				Modify filename rule and some content of kpi.
	* gen.h:	Initial version.
	* uld.c:	Porting from main.c.
				Find kpi in current directory and upload.
	* uld.h:	Initial version.
	* dbg.c:	Porting form main.c.
	* dbg.h:	Initial version.

2013-12-11 v0.0.0.1:
	* main.c:	Initial version.
	* Makefile:	Initial version.