@@ -3,6 +3,8 @@
 
 #include "main.h"
 
+extern int uld_init(void);
+extern void uld_deinit(void);
 extern int uld(const cheer_ctx_t *ctx);
 
 #endif /* ifndef _ULD_H_ */
